--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
+body {
+  font-family: 'Lora', serif;
+  margin: 0;
+}
 header {
-  background-color: aqua;
-  height: 10vh;
+  background-color: #ffe9fd;
+  height: 8rem;
 }
 main {
   background-color: azure;
@@ -8,4 +12,57 @@ main {
 footer {
   background-color: wheat;
   height: 10vh;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+li {
+  float: left;
+}
+li a {
+  display: block;
+  color: #4d4d4d;
+  text-align: center;
+  padding-left: 2.5rem;
+  text-decoration: none;
+}
+#nav {
+  height: 100%;
+}
+#menu {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  font-size: 1.8rem;
+  font-weight: 500;
+}
+#logo {
+  float: left;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  font-weight: 800;
+  font-size: 2.5rem;
+}
+#imagen-logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height: 80%;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+#slogan {
+  background-image: url(https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/article_thumbnails/other/cat_eating_meal_other/1800x1200_cat_eating_meal_other.jpg);
+  background-position: center;
+  height: 40rem;
+  box-shadow: inset 0 0 0 100vw rgba(0, 0, 0, 0.5);
+  text-align: center;
+  display: flex;
+  align-items: center;
+  color: #ffe9fd;
+  font-size: 7rem;
 }
